Fixing year overflow issues

--- a/sass/application.scss
+++ b/sass/application.scss
@@ -17,8 +17,8 @@ $chapter-color-90s: #90A99E; // #000088
 $chapter-color-00s: #B7C1AC; // #C086E1
 $chapter-color-10s: #7E3531;
 
-$target_height: 5;
-
+$target-height: 5;
+$dive-max-height: 1000000px;
 // Compass Variables
 
 $legacy-support-for-ie6: false;
@@ -129,8 +129,8 @@ header {
 .target {
 	position: relative;
 	cursor: pointer;
-	padding: #{($target_height)}em 0;
-	margin: #{($target_height * -1)}em 0;
+	padding: #{($target-height)}em 0;
+	margin: #{($target-height * -1)}em 0;
 
 	@extend .ui;
 	// @include background-rgba(teal, 0.33);
@@ -197,20 +197,20 @@ header {
 
 .dive__open, .com:focus {
 	// New
-	// margin: 0 0 #{($target_height * -1)}em 0;
-	// padding-top: #{($target_height * 0.5)}em;
-	max-height: 10000px;
+	// margin: 0 0 #{($target-height * -1)}em 0;
+	// padding-top: #{($target-height * 0.5)}em;
+	max-height: $dive-max-height;
 }
 
 /* Dive Padding Animation, height */
 
 .yearTOC.dive__open, .yearTOC.dive__open {
-	padding: 1em 0;
+	padding: 1em 0 10em 0;
 }
 
 .com.dive__open .com_wrapper, .com:focus .com_wrapper {
-	padding: 1em 0;
-	max-height: 1000px;
+	padding: 1em 0 10em 0;
+	max-height: $dive-max-height;
 }
 
 
@@ -301,10 +301,11 @@ header {
 	display: block;
 	position: relative;
 	overflow: hidden;
+	padding: 0 0 5em 0;
 }
 
 .toc_item { // markup needs to be changed
-	// overflow: hidden;
+	overflow: hidden;
 	display: block;
 	cursor: pointer;
 	position: relative;
@@ -367,17 +368,16 @@ header {
 .toc_year, .yearItem {
 	background: $content-background;
 	display: block;
-	padding: 5em 0 0 0;
 	position: relative;
 	border-bottom: 1px solid rgba(255,255,255,0.5); // ?
+	padding-top: 7em;
 }
 
 .com_year_wrap { // change to .toc_year_head
 	display: block;
+	position: relative;
 	max-width: #{$column * 10};
 	margin: 0 0 0 #{$column * 2};
-	position: relative;
-	bottom: 0;
 	padding: 0 0.5em;
 
 	@include background-rgba(#FFF, 0.75);
@@ -404,7 +404,7 @@ header {
 
 /* This moves the :before arrow, might not make sense anyway for years accordion
 .chap.dive__open {
-	padding: #{($target_height * 0.5)}em 0;
+	padding: #{($target-height * 0.5)}em 0;
 }
 */
 
